Fixes z-index issue with photo border.

--- a/app/styles/_photos.scss
+++ b/app/styles/_photos.scss
@@ -39,7 +39,7 @@
   top: 74px;
   left: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   background: $bg-color-accent;
   padding: 0 73px;
 
